# crewAI_agent

./: README.md
TravelingExpert/: agents.py  main.py  pyproject.toml  requirements.txt
TravelingExpert/tools/: search_tools.py
TutorialRecommender/: .gitignore  agents.py  main.py  pyproject.toml  requirements.txt  tasks.py
TutorialRecommender/tools/: search_tools.py
